# alicia

./: .gitignore  README.md  pyproject.toml
src/alicia/mvp_1/: speech_to_text.py
